--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,63 +1,84 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    min-height: 100vh;
-    background-color: #fff;
-  }
-  
-  .side-navbar {
-    width: 300px;
-    height: 100%;
-    position: fixed;
-    font-size: 15px;
-    margin-left: -300px;
-    background-color: #0ea2bd;
-    transition: 0.5s;
-  }
-  
-  .nav-link:active,
-  .nav-link:focus,
-  .nav-link:hover {
-    background-color: #ffffff26;
-  }
-  
-  .my-container {
-    transition: 0.5s;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  background-color: #fff;
+}
+
+ul{
+  list-style: none;
+}
+
+/*-------------------------------
+START SIDEBAR 
+-------------------------------- */
+.side-navbar {
+  cursor: pointer;
+  width: 300px;
+  height: 100%;
+  position: fixed;
+  font-size: 15px;
+  margin-left: -300px;
+  background-color: #0ea2bd;
+  transition: 0.5s;
+}
+
+.nav-link.active,
+.nav-link:focus,
+.nav-link:hover {
+  background-color: #ffffff26;
+}
+
+.my-container {
+  transition: 0.5s;
+}
 
 
-  .my-container .top-navbar{
-    background-color: #0ea2bd;
-    color: #fff;
-    overflow: hidden;
-  }
+.my-container .top-navbar {
+  background-color: #0ea2bd;
+  color: #fff;
+  overflow: hidden;
+}
 
-  .my-container .top-navbar .dept-name{
-    flex: 1;
-    text-align: center;
-    letter-spacing: 3px;
-  }
-  
-  .active-nav {
-    margin-left: 0;
-  }
-  
-  /* for main section */
-  .active-cont {
-    margin-left: 300px;
-  }
-  
-  #menu-btn {
-    color: #fff;
-    font-size: 30px;
-  }
-  
-  .nav-link .bi{
-    font-size: 15px;
-  }
+.my-container .top-navbar .dept-name {
+  flex: 1;
+  text-align: center;
+  letter-spacing: 3px;
+}
 
-  
+.active-nav {
+  margin-left: 0;
+}
+
+/* for main section */
+.active-cont {
+  margin-left: 300px;
+}
+
+#menu-btn {
+  color: #fff;
+  font-size: 30px;
+}
+
+.nav-link .bi {
+  font-size: 15px;
+}
+
+/*-------------------------------
+END SIDEBAR 
+-------------------------------- */
+
+/*-------------------------------
+START HOME CAROUSEL SLIDER 
+-------------------------------- */
+.carousel .carousel-inner {
+  height: 500px;
+  object-fit: cover;
+}
+/*-------------------------------
+END HOME CAROUSEL SLIDER 
+-------------------------------- */
