--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -404,6 +404,8 @@ tbody tr:hover {
     color: var(--nav-hover-color);
   }
 
+  
+
   .navmenu .dropdown ul {
     margin: 0;
     padding: 10px 0;
@@ -425,7 +427,7 @@ tbody tr:hover {
   }
 
   .navmenu .dropdown ul a {
-    padding: 10px 20px;
+    padding: 10px 0;
     font-size: 15px;
     text-transform: none;
     color: var(--nav-dropdown-color);
@@ -449,7 +451,7 @@ tbody tr:hover {
 
   .navmenu .dropdown .dropdown ul {
     top: 0;
-    left: -90%;
+    /* left: -90%; */
     visibility: hidden;
   }
 
