--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -427,7 +427,7 @@ tbody tr:hover {
   }
 
   .navmenu .dropdown ul a {
-    padding: 10px 0;
+    padding: 10px 20px;
     font-size: 15px;
     text-transform: none;
     color: var(--nav-dropdown-color);
@@ -438,11 +438,10 @@ tbody tr:hover {
   }
 
   .navmenu .dropdown ul a:hover,
-  .navmenu .dropdown ul .active:hover,
+  .navmenu .dropdown ul li .active,
   .navmenu .dropdown ul li:hover>a {
     color: var(--nav-dropdown-hover-color);
   }
-
   .navmenu .dropdown:hover>ul {
     opacity: 1;
     top: 100%;
@@ -451,7 +450,7 @@ tbody tr:hover {
 
   .navmenu .dropdown .dropdown ul {
     top: 0;
-    /* left: -90%; */
+    left: -90%;
     visibility: hidden;
   }
 
@@ -2016,7 +2015,8 @@ section,
 }
 
 .portfolio-details .swiper-wrapper {
-  /* height: 100%; */
+  height: 100vh;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
