--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,29 +1,40 @@
-
 /* Fonts */
 :root {
-  --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --heading-font: "Source Sans Pro",  sans-serif;
-  --nav-font: "Poppins",  sans-serif;
+  --default-font: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --heading-font: "Source Sans Pro", sans-serif;
+  --nav-font: "Poppins", sans-serif;
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
-:root { 
-  --background-color: #ffffff; /* Background color for the entire website, including individual sections */
-  --default-color: #0c0c0c; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #485664; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #0ea2bd; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
-  --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
-  --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+:root {
+  --background-color: #ffffff;
+  /* Background color for the entire website, including individual sections */
+  --default-color: #0c0c0c;
+  /* Default color used for the majority of the text content across the entire website */
+  --heading-color: #485664;
+  /* Color for headings, subheadings and title throughout the website */
+  --accent-color: #0ea2bd;
+  /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --surface-color: #ffffff;
+  /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
+  --contrast-color: #ffffff;
+  /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
-  --nav-color: #485664;  /* The default color of the main navmenu links */
-  --nav-hover-color: #0ea2bd; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
-  --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
-  --nav-dropdown-color: #485664; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #0ea2bd; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-color: #485664;
+  /* The default color of the main navmenu links */
+  --nav-hover-color: #0ea2bd;
+  /* Applied to main navmenu links when they are hovered over or active */
+  --nav-mobile-background-color: #ffffff;
+  /* Used as the background color for mobile navigation menu */
+  --nav-dropdown-background-color: #ffffff;
+  /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
+  --nav-dropdown-color: #485664;
+  /* Used for navigation links of the dropdown items in the navigation menu. */
+  --nav-dropdown-hover-color: #0ea2bd;
+  /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -258,7 +269,7 @@ tbody tr:hover {
   padding: 20px 0;
   transition: all 0.5s;
   z-index: 997;
-  box-shadow: 0 0  8px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
 }
 
 .header .logo {
@@ -399,12 +410,10 @@ tbody tr:hover {
   }
 
   .navmenu li:hover>a,
-  .navmenu .active,
+  .navmenu ul li a.active,
   .navmenu .active:focus {
     color: var(--nav-hover-color);
   }
-
-  
 
   .navmenu .dropdown ul {
     margin: 0;
@@ -442,6 +451,7 @@ tbody tr:hover {
   .navmenu .dropdown ul li:hover>a {
     color: var(--nav-dropdown-hover-color);
   }
+
   .navmenu .dropdown:hover>ul {
     opacity: 1;
     top: 100%;
@@ -692,7 +702,7 @@ tbody tr:hover {
   margin-bottom: 0;
 }
 
-.footer .copyright a:hover{
+.footer .copyright a:hover {
   text-decoration: underline;
 }
 
@@ -914,8 +924,9 @@ section,
   text-decoration: underline;
 
 }
-.college-committees li i{
-  color:#0ea2bd;
+
+.college-committees li i {
+  color: #0ea2bd;
 }
 
 .college-committees li:last-child {
